--- a/FROM/CMD/dockerfile
+++ b/FROM/CMD/dockerfile
@@ -1,4 +1,4 @@
 FROM almalinux
 RUN yum install nginx -y
-RUN echo "Hello, welcome to Dockerfile. A way of creating own images"
+RUN echo "Hello, welcome to Dockerfile. A way of creating own images" > /usr/share/nginx/html/hello.html
 CMD [ "nginx", "-g", "daemon off;" ]
