--- a/LABEL/dockerfile
+++ b/LABEL/dockerfile
@@ -1,4 +1,4 @@
 FROM almalinux:8
-LABEL COURSE=DevOps
-      TRAINER=SIVAKUMAR
+LABEL COURSE=DevOps \
+      TRAINER=SIVAKUMAR \
       DURATION=100HRS
