--- a/COPY/dockerfile
+++ b/COPY/dockerfile
@@ -2,4 +2,4 @@ FROM nginx
 #removing default html
 RUN rm -rf /usr/share/nginx/html/index.html
 # COPY index.html /usr/share/nginx/html/index.html
-COPY qi/ /usr/share/nginx/html/
+COPY /qi/oxer-html/ /usr/share/nginx/html/
