--- a/ADD/dockerfile
+++ b/ADD/dockerfile
@@ -1,4 +1,4 @@
 FROM almalinux:8
 ADD hello.txt /tmp/
 ADD https://raw.githubusercontent.com/techworldwithsiva/docker-install-commands/master/docker-commands.MD /tmp/
-
+ADD sample-1.tar /tmp/
